# energy-mix-api

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
api/: data_preprocessing.py  gcp.py  main.py  utils.py
