[project]
name = "energy-mix-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymeric THIBAUT",email = "aymeric.thibaut@hotmail.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tensorflow (==2.17.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
