[tool.poetry]
name = "energy-mix-api"
version = "0.1.0"
description = "API FastAPI pour exposer les prédictions du projet Energy Mix"
authors = ["Amine Lakchini <amine.lakchini6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# Core API
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
python-dotenv = ">=1.0.1,<2.0.0"

# Machine learning
tensorflow = "==2.17.1"
numpy = "*"

# Si ton API lit un .h5 ou utilise du traitement
scikit-learn = "*"

# Import du projet principal en local (si besoin)
# energy-mix-core = { path = "../Energy_Mix_Project/energy-mix-api" }
pandas = "2.2.2"

[tool.poetry.group.dev.dependencies]
# Dépendances pour développement uniquement
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
